--- a/styles.scc/styles.css
+++ b/styles.scc/styles.css
@@ -10,9 +10,12 @@ background-color: rgb(230, 232, 253);
     display: grid;
     grid-template-columns: repeat(4, 50px) ;
     grid-template-rows: repeat(6, 50px);
-    background-color: rgb(91, 112, 112);
+    background-color: rgb(225, 236, 236);
     grid-gap: 10px;
     color: rgb(220, 228, 228);
+}
+.box {
+    background-color: darkslategray;
 }
 .box:nth-child(4n-1) {
     background-color: rgb(245, 10, 10);
@@ -24,11 +27,6 @@ background-color: rgb(230, 232, 253);
 
 .box:nth-last-child(2) {
     background-color: rgb(245, 10, 10);;
-}
-
-.btn {
-    display: flex;
-    margin-top: 50px;
 }
 .button {
 width: 300px;
@@ -47,6 +45,68 @@ align-items: center;
 text-align: center;
 padding-left: 50px;
 color: #FFFFFF;
-margin: 0 auto;
+margin: 0;
+box-shadow: 0px 4px 4px rgba(65, 75, 212, 0.753);
+margin-top: -30px;
+margin-left: 46px;
+margin-right: 46px;
 margin-bottom: 50px;
 }
+
+.btn {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    margin-top: 50px; 
+    padding-top: 30px;
+}
+
+.rec1 {
+    width: 200px;
+    height: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+margin: 0;
+background-color: #C4C4C4;
+}
+
+.rec1::before {
+content: "";
+    width: 200px;
+    height: 2 px;
+    display: flex;
+       flex-direction: column;
+    margin: 0;
+   background: #C4C4C4;
+}
+.rec1:hover::before {
+    width: 200px;
+    height: 2px;
+    display: flex;
+       flex-direction: column;
+    margin: 0;
+
+    background-color: rgb(78, 78, 248);
+   
+}
+/*.rectangle {
+    width: 200px;
+    height: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+margin: 0;
+padding-top: 30px;
+}*/
+
+.rec2 {
+    width: 200px;
+    height: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+margin: 0;
+padding-top: 8px;
+}
+
