--- a/styles.scc/styles.css
+++ b/styles.scc/styles.css
@@ -35,7 +35,7 @@ background: #44D3A8;
 border: 0;
 border-radius: 100px;
 border-color: white;
-font-family: 'Helvetica';
+font-family: Lato;
 font-style: normal;
 font-weight: 700;
 font-size: 18px;
@@ -43,7 +43,7 @@ line-height: 28px;
 display: flex;
 align-items: center;
 text-align: center;
-padding-left: 50px;
+padding-left: 60px;
 color: #FFFFFF;
 margin: 0;
 box-shadow: 0px 4px 4px rgba(65, 75, 212, 0.753);
